# PycalcActivation

./: .gitignore  README.md  pyproject.toml
models/: simpleMcGillModel
notebooks/: SVM_base.ipynb  data_test.ipynb  testPrediction.ipynb  trainer.ipynb  trainer_testing_stuff.ipynb  uncertainty.ipynb  validationHMR.ipynb
src/PycalcAct/: dataset.py  model.py  predictor.py  trainer.py
src/PycalcAct/utils/: wrapper.py
